...
        <scene sceneID="hNz-n2-bh7">
            <objects>
                <viewController id="9pv-A4-QxB" userLabel="Home" customClass="HomeViewController" customModule="Le_Planner" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="tsR-hK-woN">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
...
                                                        <rect key="frame" x="0.0" y="150" width="375" height="25"/>
                                                        <subviews>
                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Quote of the day" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4uZ-2g-Tbf">
                                                                <rect key="frame" x="10" y="0.0" width="355" height="25"/>
                                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="19"/>
...
                                                    </constraints>
                                                </imageView>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FWQ-hv-XvO">
                                                    <rect key="frame" x="110" y="5" width="255" height="30"/>
                                                    <constraints>
...
                    </view>
                    <extendedEdge key="edgesForExtendedLayout" bottom="YES"/>
                    <navigationItem key="navigationItem" title="Events" id="faY-sW-BAs">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="5au-gk-wgM">
                            <connections>
...
        <scene sceneID="I0V-eI-uGJ">
            <objects>
                <viewController title="Add Event" id="JJH-3E-6Hd" userLabel="Add Event" customClass="AddEventViewController" customModule="Le_Planner" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="w9c-kn-x5L">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
...
                                                <textInputTraits key="textInputTraits"/>
                                            </textField>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Description" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="KYt-Hs-7Dh">
                                                <rect key="frame" x="10" y="102" width="355" height="30"/>
                                                <nil key="textColor"/>
...
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="erm-eE-LfM">
                                                <rect key="frame" x="10" y="142" width="355" height="21"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                                <textInputTraits key="textInputTraits"/>
                                            </textField>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Choose event type" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gFz-nx-Bc9">
                                                <rect key="frame" x="10" y="234" width="355" height="30"/>
                                                <nil key="textColor"/>
...
                    <extendedEdge key="edgesForExtendedLayout" bottom="YES"/>
                    <navigationItem key="navigationItem" title="Add Event" id="ip0-t2-DzT" userLabel="Add Event">
                        <barButtonItem key="rightBarButtonItem" title="Add" id="JtT-eW-AxJ">
                            <connections>
                                <action selector="addEventBtn:" destination="JJH-3E-6Hd" id="IVw-NC-pxX"/>
...
                    </view>
                    <extendedEdge key="edgesForExtendedLayout" bottom="YES"/>
                    <navigationItem key="navigationItem" title="Notes" id="r5a-QT-cgM">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="ytP-jA-LVY">
                            <connections>
...
                    </view>
                    <extendedEdge key="edgesForExtendedLayout" bottom="YES"/>
                    <navigationItem key="navigationItem" title="Add Note" id="IkX-NB-EM7">
                        <barButtonItem key="rightBarButtonItem" title="Add" id="yBN-57-TuT">
                            <connections>
...
