...
        newNote.body = noteDetailField.text!
        
        //Delegate
        delegate?.newNoteData(data: newNote)
        
        //Build alert for note added
        let alert = UIAlertController(title: "Note Added",
                                      message: "Your note was added",
                                      preferredStyle: .alert)
        
        alert.addAction(UIAlertAction(title: NSLocalizedString("OK", comment: "Default action"), style: .`default`, handler: { _ in
            self.navigateToPreviousScreen()
        }))
        Sound.play(file: "addedSound.wav")
        self.present(alert, animated: true, completion: nil)
    }
    
...
