...
        Sound.play(file: "tapSound.wav")
        
        self.present(alert, animated: true, completion: nil)
    }
    
    func tableView(_ tableView: UITableView, editActionsForRowAt indexPath: IndexPath) -> [UITableViewRowAction]? {
        let deleteAction = UITableViewRowAction(style: .destructive, title: "Delete") { (action, index) in
            self.context.delete(self.noteArray[indexPath.row])
            self.noteArray.remove(at: indexPath.row)
            self.saveNotes()
            Sound.play(file: "deleteSound.wav")
        }
        return [deleteAction]
...
