...
        self.present(alert, animated: true, completion: nil)
        Sound.play(file: "errorSound.wav")
    }
    
    private func eventAddedAlert(){
        //Build alert for event added
        let alert = UIAlertController(title: "Event Added",
                                      message: "Your event was added",
                                      preferredStyle: .alert)
        
        alert.addAction(UIAlertAction(title: NSLocalizedString("OK", comment: "Default action"), style: .`default`, handler: { _ in
            self.navigateToPreviousScreen()
        }))
...
